# github-hook-rs

./: .gitignore  Cargo.toml  README.md  script.sh
.github/workflows/: build.yml
src/: main.rs  script.rs
