[package]
name = "github-hook-rs"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.3"
hex = { version = "0.4.3", features = ["std"] }
hmac = "0.12.1"
log = "0.4.21"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
sha2 = "0.10.8"

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#minimizing-rust-binary-size
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
incremental = true # Enable incremental compilation.
codegen-units = 1 # Use a single codegen unit to optimize for size.
lto = true # Enable link-time optimization.
